--no-verify WIP

--- a/locale/de.json
+++ b/locale/de.json
@@ -19,16 +19,18 @@
 	"common.labels.name": "Name",
 	"common.labels.password": "Passwort",
 	"common.labels.register": "Registrieren",
+	"common.labels.repeat.email": "Neue E-Mail",
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
 	"common.placeholder.birthdate": "20.2.2002",
 	"common.placeholder.email": "clara.fall@mail.de",
-	"common.placeholder.email.update": "Neue E-mail Adresse",
-	"common.placeholder.email.confirmation": "E-mail Adresse wiederholen",
+	"common.placeholder.email.update": "Neue E-Mail-Adresse",
+	"common.placeholder.email.confirmation": "E-Mail-Adresse wiederholen",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
 	"common.placeholder.password.confirmation": "Bestätigung durch Passwort",
+	"common.placeholder.repeat.email": "E-Mail-Adresse wiederholen",
 	"common.words.and": "und",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
 	"components.legacy.footer.about": "Über das Projekt",
@@ -133,11 +135,11 @@
 	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
 	"pages.account.button.user.data": "Nutzerdaten ändern",
-	"pages.account.button.user.email": "E-mail ändern",
+	"pages.account.button.user.email": "E-Mail ändern",
 	"pages.account.button.user.password": "Passwort ändern",
 	"pages.account.index.title": "Account",
 	"pages.account.index.user.data": "Aktuelle Nutzerdaten:",
-	"pages.account.index.user.email": "Aktuelle E-mail Adresse:",
+	"pages.account.index.user.email": "Aktuelle E-Mail Adresse:",
 	"pages.account.index.user.password": "Aktuelles Passwort:",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
