--- a/locale/de.json
+++ b/locale/de.json
@@ -215,6 +215,7 @@
 	"pages.loginInstances.login": "Einloggen",
 	"pages.loginInstances.bundesland": "Wähle deine Cloud",
 	"pages.loginInstances.hpi_link": "https://schul-cloud.org/login",
+	"pages.loginInstances.open_hpi_link": "https://open.schul-cloud.org/login",
 	"pages.loginInstances.brb_link": "https://brandenburg.schul-cloud.org/login",
 	"pages.loginInstances.n21_link": "https://niedersachsen.cloud/login",
 	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de/login",
