--- a/locale/de.json
+++ b/locale/de.json
@@ -185,14 +185,17 @@
 	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
-	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur Datenschutzerklärung und zur Nutzungsordnung der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per Handzettel, eingeholt hast.",
+	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur {dataProtection} und zur {terms} der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per {handout}, eingeholt hast.",
 	"pages.administration.students.consent.title": "Analoge Registrierung",
+	"pages.administration.students.consent.handout": "Handzettel",
 	"pages.administration.students.consent.steps.complete": "Daten ergänzen",
 	"pages.administration.students.consent.steps.complete.next": "Daten übernehmen",
 	"pages.administration.students.consent.steps.complete.info": "Achte drauf, dass die Geburtsdaten aller Nutzer:innen vollständig sind und ergänze fehlende gegebenenfalls.",
+	"pages.administration.students.consent.steps.complete.warn": "Nicht alle Nutzer:innen haben gültige Geburtsdaten. Bitte ergänze fehlende Geburtsdaten zunächst.",
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
-	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen habe.",
+	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die Einverständniserklärungen der Eltern auf Papierweg erhalten und die {rulesOfConsent} gelesen habe.",
+	"pages.administration.students.consent.steps.register.consent-rules": "Regeln zur Einverständniserklärung",
 	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
 	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
 	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
