--- a/locale/de.json
+++ b/locale/de.json
@@ -18,6 +18,7 @@
 	"common.labels.login": "Login",
 	"common.labels.name": "Name",
 	"common.labels.password": "Passwort",
+	"common.labels.password.new": "Neues Passwort",
 	"common.labels.register": "Registrieren",
 	"common.labels.repeat.email": "Neue E-Mail",
 	"common.labels.room": "Raum",
@@ -30,6 +31,9 @@
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
 	"common.placeholder.password.confirmation": "Bestätigung durch Passwort",
+	"common.placeholder.password.current": "Aktuelles Passwort",
+	"common.placeholder.password.new": "Neues Passwort",
+	"common.placeholder.password.new.confirmation": "Neues Passwort wiederholen",
 	"common.placeholder.repeat.email": "E-Mail-Adresse wiederholen",
 	"common.words.and": "und",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
