add links to terms

--- a/locale/de.json
+++ b/locale/de.json
@@ -194,8 +194,8 @@
 	"pages.administration.students.consent.steps.complete.warn": "Nicht alle Nutzer:innen haben gültige Geburtsdaten. Bitte ergänze fehlende Geburtsdaten zunächst.",
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
-	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die Einverständniserklärungen der Eltern auf Papierweg erhalten und die {rulesOfConsent} gelesen habe.",
-	"pages.administration.students.consent.steps.register.consent-rules": "Regeln zur Einverständniserklärung",
+	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die {analogConsent} auf dem Papierweg von den Eltern der oben genannten Schüler:innen unterschrieben erhalten habe.",
+	"pages.administration.students.consent.steps.register.analog-consent": "analoge Einwilligungserklärung",
 	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
 	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
 	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
