--- a/locale/de.json
+++ b/locale/de.json
@@ -3,6 +3,7 @@
 	"common.actions.back": "Zurück",
 	"common.actions.cancel": "Abbrechen",
 	"common.actions.discard": "Verwerfen",
+	"common.actions.ok": "Ok",
 	"common.actions.remove": "Löschen",
 	"common.actions.save": "Speichern",
 	"common.actions.scrollToTop": "Nach oben scrollen",
@@ -138,15 +139,28 @@
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
 	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
+	"pages.account.current.mail": "ist die aktuelle primäre E-Mail-Adresse",
 	"pages.account.button.user.data": "Nutzerdaten ändern",
 	"pages.account.button.user.email": "E-Mail ändern",
 	"pages.account.button.user.password": "Passwort ändern",
+	"pages.account.email.edit.btn": "Email-Adresse ändern",
+	"pages.account.email.edit.confirmation.mail": "Eine Bestätigungsmail wurde an deine neue E-Mail-Adresse gesendet. Bitte bestätige diese.",
+	"pages.account.email.edit.current.mail": "Deine aktuelle E-mail-Adresse lautet:",
+	"pages.account.email.edit.title": "E-Mail-Adresse ändern",
 	"pages.account.index.title": "Account",
 	"pages.account.index.user.data": "Aktuelle Nutzerdaten:",
 	"pages.account.index.user.email": "Aktuelle E-Mail Adresse:",
 	"pages.account.index.user.password": "Aktuelles Passwort:",
 	"pages.account.index.user.teams": "Team Einstellungen",
+	"pages.account.index.info.mail": "Deine neue Email {newEmail} muss noch bestätigt werden. Bitte folge den Anweisungen in der Bestätigungsmail, welche an die neue Adresse versand wurde.",
 	"pages.account.index.user.thirdPartyProviders": "Drittanbieter-Logins",
+	"pages.account.name.edit.btn": "Nutzerdaten ändern",
+	"pages.account.name.edit.title": "Name ändern",
+	"pages.account.name.edit.current.name": "Deine aktueller Name lautet:",
+	"pages.account.password.edit.title": "Passwort ändern",
+	"pages.account.password.edit.password.info": "Mindestens 8 Zeichen mit Groß- und Kleinschreibung, davon jeweilsmindestens eine Zahl und ein Sonderzeichen. Erlaubte Sonderzeichen sind: !§$%&/()=?;:,.#+*~",
+	"pages.acctivation.index.success": "Deine E-Mail-Adresse wurde erfolgreich geändert",
+	"pages.activation.index.error": "Deine Daten konnten nicht geändert werden",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
