adding files from previous branch

--- a/locale/de.json
+++ b/locale/de.json
@@ -47,6 +47,7 @@
 	"components.molecules.ContentCardMenu.action.report": "Melden",
 	"components.molecules.ContentCardMenu.action.share": "Teilen",
 	"components.molecules.ContextMenu.action.close": "Kontextmenü schließen",
+	"components.molecules.EdusharingFooter.text": "powered by",
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
 	"components.molecules.adminfooterlegend.title": "Legende",
@@ -131,6 +132,10 @@
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
 	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
+	"mixins.typeMeta.types.default": "Inhalt",
+	"mixins.typeMeta.types.image": "Bild",
+	"mixins.typeMeta.types.webpage": "Webseite",
+	"mixins.typeMeta.types.video": "Video",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
@@ -202,11 +207,17 @@
 	"pages.administration.teachers.new.error": "Lehrer:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.teachers.new.success": "Lehrer:in erfolgreich angelegt!",
 	"pages.administration.teachers.new.title": "Lehrer:in hinzufügen",
-	"pages.content.empty_state.error.message": "Wir konnten leider nichts finden, bitte suche erneut.",
-	"pages.content.empty_state.error.oops": "Oops",
+	"pages.content.empty_state.error.message": "<span><p>Achte darauf, dass alle Wörter richtig geschrieben sind.<br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.</p></span>",
+	"pages.content.empty_state.error.title": "<span>Ooops,<br>keine Ergebnisse!</span>",
+	"pages.content.empty_state.error.subtitle": "Vorschlag:",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
+	"pages.content._id.metadata.createdAt": "erstellt am",
+	"pages.content._id.metadata.updatedAt": "zuletzt geändert am",
+	"pages.content._id.metadata.author": "Autor",
+	"pages.content._id.metadata.provider": "Herausgeber",
+	"pages.content._id.addToTopic": "Zum Thema hinzufügen",
 	"pages.courses.index.courses.active": "Aktuelle Kurse",
 	"pages.courses.index.courses.archived": "Archivierte Kurse",
 	"pages.courses.index.title": "Meine Kurse",
