--- a/locale/de.json
+++ b/locale/de.json
@@ -47,6 +47,7 @@
 	"components.molecules.ContentCardMenu.action.report": "Melden",
 	"components.molecules.ContentCardMenu.action.share": "Teilen",
 	"components.molecules.ContextMenu.action.close": "Kontextmenü schließen",
+	"components.molecules.EdusharingFooter.text": "powered by",
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
 	"components.molecules.adminfooterlegend.title": "Legende",
@@ -84,6 +85,7 @@
 	"components.organisms.FormDatasourcesLogin.btn.update": "Aktualisiere die Datenquelle",
 	"components.organisms.FormDatasourcesLogin.errors.create": "Es gab ein Problem beim Verbinden mit der Datenquelle",
 	"components.organisms.FormDatasourcesLogin.errors.patch": "Es gab ein Problem beim Aktualisieren der Datenquelle",
+	"components.organisms.FormDatasourcesLogin.input.name.label": "Name",
 	"components.organisms.FormDatasourcesLogin.input.name.placeholder": "Name der Datenquelle",
 	"components.organisms.FormDatasourcesLogin.success.create": "Die Datenquelle wurde erfolgreich angelegt",
 	"components.organisms.FormDatasourcesLogin.success.patch": "Die Datenquelle wurde erfolgreich aktualisiert",
@@ -131,6 +133,10 @@
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
 	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
+	"mixins.typeMeta.types.default": "Inhalt",
+	"mixins.typeMeta.types.image": "Bild",
+	"mixins.typeMeta.types.webpage": "Webseite",
+	"mixins.typeMeta.types.video": "Video",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
