--- a/locale/de.json
+++ b/locale/de.json
@@ -153,6 +153,7 @@
 	"pages.account.index.user.password": "Aktuelles Passwort:",
 	"pages.account.index.user.teams": "Team Einstellungen",
 	"pages.account.index.info.mail": "Deine neue Email {newEmail} muss noch bestätigt werden. Bitte folge den Anweisungen in der Bestätigungsmail, welche an die neue Adresse versand wurde.",
+	"pages.account.index.thirdParty.info": "Deine Nutzerdaten werden von einem zentralen Identitätsmanagement (IDM) synchronisiert. Änderungen daran können nur in dem Ausgangssystem erfolgen (z.B. Schulserver), das den Daten im IDM zugrunde liegt. Bitte wende dich an den lokalen Administrator deiner Schule, um Änderungen an deinen Nutzerdaten vorzunehmen.",
 	"pages.account.index.user.thirdPartyProviders": "Drittanbieter-Logins",
 	"pages.account.name.edit.btn": "Nutzerdaten ändern",
 	"pages.account.name.edit.title": "Name ändern",
