--- a/locale/de.json
+++ b/locale/de.json
@@ -208,14 +208,21 @@
 	"pages.administration.teachers.new.success": "Lehrer:in erfolgreich angelegt!",
 	"pages.administration.teachers.new.title": "Lehrer:in hinzufügen",
 	"pages.content._id.addToTopic": "Zum Thema hinzufügen",
+	"pages.content.label.chooseACourse": "Wähle einen Kurs / Fach",
+	"pages.content.label.chooseALessonTopic": "Wähle ein Unterrichtsthema",
+	"pages.content.placeholder.chooseACourse": "Mathe 5A",
+	"pages.content.placeholder.chooseALessonTopic": "Pythagoras",
+	"pages.content.label.deselect": "Entfernen",
+	"pages.content.label.select": "Auswählen",
+	"pages.content.label.selected": "Aktiv",
 	"pages.content._id.metadata.author": "Autor",
 	"pages.content._id.metadata.createdAt": "erstellt am",
 	"pages.content._id.metadata.provider": "Herausgeber",
 	"pages.content._id.metadata.updatedAt": "zuletzt geändert am",
-	"pages.content.empty_state.error.message": "Wir konnten leider nichts finden, bitte suche erneut.",
+	"pages.content.empty_state.error.message": "Achte darauf, dass alle Wörter richtig geschrieben sind. <br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.<br>",
 	"pages.content.empty_state.error.oops": "Oops",
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
-	"pages.content.empty_state.error.title": "<span>Ooops,<br>keine Ergebnisse!</span>",
+	"pages.content.empty_state.error.title": "<span>Ooopsi, keine Ergebnisse!</span>",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
