--- a/locale/de.json
+++ b/locale/de.json
@@ -164,8 +164,9 @@
 	"pages.account.password.edit.confirmation": "Dein Passwort wurde erfolgreich geändert",
 	"pages.account.password.edit.password.info": "Mindestens 8 Zeichen mit Groß- und Kleinschreibung, davon jeweils mindestens eine Zahl und ein Sonderzeichen. Erlaubte Sonderzeichen sind: !§$%&/()=?;:,.#+*~",
 	"pages.account.password.edit.title": "Passwort ändern",
-	"pages.activation.index.error": "Deine Daten konnten nicht geändert werden",
-	"pages.activation.index.success": "Deine E-Mail-Adresse wurde erfolgreich geändert",
+	"pages.activation._activationCode.index.error.title": "Deine Daten konnten nicht geändert werden",
+	"pages.activation._activationCode.index.error.description": "Deine Änderungen konnten leider nicht durchgeführt werden, da der Link ungültig oder abgelaufen ist. Bitte versuche es erneut.",
+	"pages.activation._activationCode.index.success.email": "Deine E-Mail-Adresse wurde erfolgreich geändert",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
