add class filtering

--- a/locale/de.json
+++ b/locale/de.json
@@ -71,15 +71,15 @@
 	"components.organisms.DatasourceRunWebuntis.loading": "Lade Daten...",
 	"components.organisms.DatasourceRunWebuntis.numberOfImported": "{imported}/{total} Datensätze importiert",
 	"components.organisms.DatasourceRunWebuntis.unknown": "Status unbekannt",
-	"components.organisms.FormDatasourceLoginWebuntis.schoolname.label": "Schulname",
-	"components.organisms.FormDatasourceLoginWebuntis.schoolname.placeholder": "WebUntis Schulname",
-	"components.organisms.FormDatasourceLoginWebuntis.username.label": "Benutzername",
-	"components.organisms.FormDatasourceLoginWebuntis.username.placeholder": "WebUntis Nutzername",
+	"components.organisms.FormDatasourceLoginWebuntis.error.text": "Es ist ein Fehler bei der Verbindung aufgetreten. Möglicherweise haben sich deine Zugangsdaten geändert. Bitte überprüfe deine Eingabe.",
 	"components.organisms.FormDatasourceLoginWebuntis.password.label": "Passwort",
 	"components.organisms.FormDatasourceLoginWebuntis.password.placeholder": "WebUntis Passwort",
+	"components.organisms.FormDatasourceLoginWebuntis.schoolname.label": "Schulname",
+	"components.organisms.FormDatasourceLoginWebuntis.schoolname.placeholder": "WebUntis Schulname",
 	"components.organisms.FormDatasourceLoginWebuntis.url.label": "URL",
 	"components.organisms.FormDatasourceLoginWebuntis.url.placeholder": "https://webuntis.domain",
-	"components.organisms.FormDatasourceLoginWebuntis.error.text": "Es ist ein Fehler bei der Verbindung aufgetreten. Möglicherweise haben sich deine Zugangsdaten geändert. Bitte überprüfe deine Eingabe.",
+	"components.organisms.FormDatasourceLoginWebuntis.username.label": "Benutzername",
+	"components.organisms.FormDatasourceLoginWebuntis.username.placeholder": "WebUntis Nutzername",
 	"components.organisms.FormDatasourcesLogin.btn.connect": "Datenquelle anlegen",
 	"components.organisms.FormDatasourcesLogin.btn.update": "Aktualisiere die Datenquelle",
 	"components.organisms.FormDatasourcesLogin.errors.create": "Es gab ein Problem beim Verbinden mit der Datenquelle",
@@ -213,12 +213,12 @@
 	"pages.courses.new.btn_new": "Erstelle neuen Kurs",
 	"pages.courses.new.title": "Neuen Kurs erstellen",
 	"pages.impressum.title": "Impressum",
-	"pages.loginInstances.login": "Einloggen",
+	"pages.loginInstances.brb_link": "https://brandenburg.schul-cloud.org/login",
 	"pages.loginInstances.bundesland": "Wähle deine Cloud",
 	"pages.loginInstances.hpi_link": "https://schul-cloud.org/login",
-	"pages.loginInstances.open_hpi_link": "https://open.schul-cloud.org/login",
-	"pages.loginInstances.brb_link": "https://brandenburg.schul-cloud.org/login",
+	"pages.loginInstances.login": "Einloggen",
 	"pages.loginInstances.n21_link": "https://niedersachsen.cloud/login",
+	"pages.loginInstances.open_hpi_link": "https://open.schul-cloud.org/login",
 	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de/login",
 	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@schul-cloud.org",
 	"pages.mint-ec.article.footer.datasecurity": "Datenschutz und Urheberrecht",
@@ -240,6 +240,7 @@
 	"pages.news.new.title": "Erstelle eine Neuigkeit",
 	"pages.news.title": "Neuigkeiten",
 	"pages.termsofuse.title": "Nutzungsordnung und Datenschutzerklärung",
+	"storybook.lang": "Ich bin jetzt auf Deutsch!",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
 	"utils.adminFilter.consent.label.missing": "Keine Einverständniserklärungen vorhanden",
 	"utils.adminFilter.consent.label.ok": "Alle Einverständniserklärungen vorhanden",
@@ -249,16 +250,17 @@
 	"utils.adminFilter.consent.parentsAgreed": "nur Eltern haben zugestimmt",
 	"utils.adminFilter.consent.title": "Einverständniserklärungen",
 	"utils.adminFilter.date.created": "Erstellt zwischen",
-	"utils.adminFilter.date.label.until": "Erstellungsdatum bis",
 	"utils.adminFilter.date.label.from": "Erstellungsdatum von",
+	"utils.adminFilter.date.label.until": "Erstellungsdatum bis",
 	"utils.adminFilter.date.title": "Erstellungsdatum",
+	"utils.adminFilter.placeholder.class": "Nach Klass filtern...",
 	"utils.adminFilter.placeholder.complete.lastname": "Nach vollständigem Nachnamen filtern...",
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
 	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
 	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020",
+	"utils.adminFilter.teacher.class.title": "Klasse(n)",
 	"utils.adminFilter.teacher.consent.label.missing": "Keine Einverständniserklärung vorhanden",
 	"utils.adminFilter.teacher.consent.label.ok": "Einverständniserklärung vorhanden",
-	"utils.adminFilter.teacher.consent.title": "Einverständniserklärung",
 	"utils.adminFilter.teacher.consent.ok": "vorhanden",
-	"storybook.lang": "Ich bin jetzt auf Deutsch!"
+	"utils.adminFilter.teacher.consent.title": "Einverständniserklärung"
 }
