--- a/locale/de.json
+++ b/locale/de.json
@@ -226,6 +226,8 @@
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
+	"pages.content.notification.successMsg": "Material wurde erfolgreich hinzugefügt",
+	"pages.content.notification.errorMsg": "Irgendetwas ist schiefgegangen. Material konnte nicht hinzugefügt werden",
 	"pages.courses.index.courses.active": "Aktuelle Kurse",
 	"pages.courses.index.courses.archived": "Archivierte Kurse",
 	"pages.courses.index.title": "Meine Kurse",
