--- a/locale/de.json
+++ b/locale/de.json
@@ -223,7 +223,7 @@
 	"pages.content.empty_state.error.message": "Achte darauf, dass alle Wörter richtig geschrieben sind. <br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.<br>",
 	"pages.content.empty_state.error.oops": "Oops",
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
-	"pages.content.empty_state.error.title": "<span>Ooopsi, keine Ergebnisse!</span>",
+	"pages.content.empty_state.error.title": "<span>Ooops, keine Ergebnisse!</span>",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
