SC-2768 edu sharing add content UX review

--- a/locale/de.json
+++ b/locale/de.json
@@ -39,7 +39,7 @@
 	"components.legacy.footer.team": "Team",
 	"components.legacy.footer.terms": "Nutzungsordnung",
 	"components.legacy.footer.termsofuse": "Nutzungsordnung und Datenschutzerklärung",
-	"components.molecules.AddContentModal": "Material zum Thema hinzufügen",
+	"components.molecules.AddContentModal": "Hinzufügen zu",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
 	"components.molecules.ContentCard.report.email": "inhalte@schul-cloud.org",
 	"components.molecules.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
@@ -208,7 +208,7 @@
 	"pages.administration.teachers.new.error": "Lehrer:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.teachers.new.success": "Lehrer:in erfolgreich angelegt!",
 	"pages.administration.teachers.new.title": "Lehrer:in hinzufügen",
-	"pages.content._id.addToTopic": "Zum Thema hinzufügen",
+	"pages.content._id.addToTopic": "Hinzufügen zu",
 	"pages.content.label.chooseACourse": "Wähle einen Kurs / Fach",
 	"pages.content.label.chooseALessonTopic": "Wähle ein Unterrichtsthema",
 	"pages.content.placeholder.chooseACourse": "Mathe 5A",
