--- a/locale/de.json
+++ b/locale/de.json
@@ -260,7 +260,7 @@
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
 	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
 	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020",
-	"utils.adminFilter.teacher.class.title": "Klasse(n)",
+	"utils.adminFilter.class.title": "Klasse(n)",
 	"utils.adminFilter.teacher.consent.label.missing": "Keine Einverständniserklärung vorhanden",
 	"utils.adminFilter.teacher.consent.label.ok": "Einverständniserklärung vorhanden",
 	"utils.adminFilter.teacher.consent.ok": "vorhanden",
