--- a/locale/de.json
+++ b/locale/de.json
@@ -34,7 +34,7 @@
 	"common.placeholder.email.confirmation": "E-Mail-Adresse wiederholen",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
-	"common.placeholder.password.confirmation": "Bestätigung durch Passwort",
+	"common.placeholder.password.confirmation": "Durch Passwort bestätigen",
 	"common.placeholder.password.current": "Aktuelles Passwort",
 	"common.placeholder.password.new": "Neues Passwort",
 	"common.placeholder.password.new.confirmation": "Neues Passwort wiederholen",
