--- a/locale/de.json
+++ b/locale/de.json
@@ -222,7 +222,7 @@
 	"pages.loginInstances.brb_link": "https://brandenburg.schul-cloud.org/login",
 	"pages.loginInstances.n21_link": "https://niedersachsen.cloud/login",
 	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de",
-	"pages.loginInstances.mintec_link": "https://schul-cloud.org/mint-ec/willkommenspaket",
+	"pages.loginInstances.mintec_link": "https://schul-cloud.org/login",
 	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@schul-cloud.org",
 	"pages.mint-ec.article.footer.datasecurity": "Datenschutz und Urheberrecht",
 	"pages.mint-ec.article.footer.datenschutz": "Datenschutzerklärung HPI",
