--- a/locale/de.json
+++ b/locale/de.json
@@ -230,6 +230,7 @@
 	"pages.content.index.search_results": "Suchergebnisse für",
 	"pages.content.notification.successMsg": "Material wurde erfolgreich hinzugefügt",
 	"pages.content.notification.errorMsg": "Irgendetwas ist schiefgegangen. Material konnte nicht hinzugefügt werden",
+	"pages.content.preview_img.alt": "Bildvorschau",
 	"pages.courses.index.courses.active": "Aktuelle Kurse",
 	"pages.courses.index.courses.archived": "Archivierte Kurse",
 	"pages.courses.index.title": "Meine Kurse",
