--- a/locale/de.json
+++ b/locale/de.json
@@ -272,6 +272,7 @@
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
 	"pages.content.empty_state.error.title": "<span>Ooops, keine Ergebnisse!</span>",
 	"pages.content.index.search_for": "Suche nach …",
+	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
 	"pages.content.notification.successMsg": "Material wurde erfolgreich hinzugefügt",
