SC-4904: labels changed and added for Privacy N21 theme

--- a/locale/de.json
+++ b/locale/de.json
@@ -50,9 +50,11 @@
 	"components.legacy.footer.powered_by": "Translated by",
 	"components.legacy.footer.privacy_policy": "Datenschutzerklärung",
 	"components.legacy.footer.privacy_policy_HPI": "Datenschutzerklärung HPI Schul-Cloud",
+	"components.legacy.footer.privacy_policy_template": "Datenschutzerklärung Muster Schulen",
+	"components.legacy.footer.privacy_policy_school_specific": "Datenschutzerklärung der Schule",
 	"components.legacy.footer.team": "Team",
 	"components.legacy.footer.terms": "Nutzungsordnung",
-	"components.legacy.footer.termsofuse": "Nutzungsordnung und Datenschutzerklärung",
+	"components.legacy.footer.termsofuse": "Datenschutzerklärung und Nutzungsordnung",
 	"components.molecules.AccountCard.action.edit": "ändern",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
 	"components.molecules.ContentCard.report.email": "inhalte@schul-cloud.org",
@@ -283,7 +285,7 @@
 	"pages.news.new.create": "Erstellen",
 	"pages.news.new.title": "Erstelle eine Neuigkeit",
 	"pages.news.title": "Neuigkeiten",
-	"pages.termsofuse.title": "Nutzungsordnung und Datenschutzerklärung",
+	"pages.termsofuse.title": "Datenschutzerklärung und Nutzungsordnung",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
 	"utils.adminFilter.consent.label.missing": "Keine Einverständniserklärungen vorhanden",
 	"utils.adminFilter.consent.label.ok": "Alle Einverständniserklärungen vorhanden",
