--- a/locale/de.json
+++ b/locale/de.json
@@ -278,6 +278,8 @@
 	"pages.content.notification.successMsg": "Material wurde erfolgreich hinzugefügt",
 	"pages.content.notification.errorMsg": "Irgendetwas ist schiefgegangen. Material konnte nicht hinzugefügt werden",
 	"pages.content.notification.lernstoreNotAvailable": "Lernstore ist nicht verfügbar",
+	"pages.content.page.window.title": "Thema anlegen - ",
+	"pages.content.page.window.title_2": " - Deine digitale Lernumgebung",
 	"pages.content.preview_img.alt": "Bildvorschau",
 	"pages.courses.index.courses.active": "Aktuelle Kurse",
 	"pages.courses.index.courses.archived": "Archivierte Kurse",
