--- a/locale/de.json
+++ b/locale/de.json
@@ -52,7 +52,7 @@
 	"components.molecules.adminfooterlegend.title": "Legende",
 	"components.molecules.admintablelegend.externalSync": "Die Nutzerdaten deiner Schule werden aus einer externen Quelle (LDAP, IDM o.ä.) synchronisiert. Die Bearbeitung der Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der {shortName}. Finde weitere Informationen im",
 	"components.molecules.admintablelegend.help": "Hilfebereich",
-	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
+	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der HPI Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
 	"components.organisms.AutoLogoutWarning.error": "Uups… das hätte nicht passieren dürfen! Deine Sitzung konnte nicht verlängert werden. Bitte versuche es gleich noch einmal.",
 	"components.organisms.AutoLogoutWarning.error.401": "Deine Sitzung ist bereits abgelaufen. Bitte melde dich erneut an.",
@@ -147,7 +147,7 @@
 	"pages.administration.datasources.index.import": "Daten importieren",
 	"pages.administration.datasources.index.importRedirect": "Verwalten",
 	"pages.administration.datasources.index.remove.confirm.btnText": "Datenquelle entfernen",
-	"pages.administration.datasources.index.remove.confirm.message": "Möchtest du die Datenquelle \"{name}\" wirklich von der Schul-Cloud trennen?",
+	"pages.administration.datasources.index.remove.confirm.message": "Möchtest du die Datenquelle \"{name}\" wirklich von der HPI Schul-Cloud trennen?",
 	"pages.administration.datasources.index.remove.error": "Fehler beim Entfernen der Datenquellen \"{name}\"",
 	"pages.administration.datasources.index.remove.success": "Die Datenquelle \"{name}\" wurde entfernt.",
 	"pages.administration.datasources.index.title": "Datenquellen",
