--- a/locale/de.json
+++ b/locale/de.json
@@ -161,7 +161,7 @@
 	"pages.administration.datasources.new.title": "Datenquellen hinzufügen",
 	"pages.administration.datasources.webuntis._id.edit.title": "Zugangsdaten",
 	"pages.administration.datasources.webuntis.new.heading": "Gib hier deine Zugangsdaten ein",
-	"pages.administration.datasources.webuntis.new.text": "Bitte verwende keine privaten Zugangsdaten. Für die Einbindung der Datenquelle empfehlen wir einen Schul-Cloud spezifischen WebUntis Account zu erstellen.",
+	"pages.administration.datasources.webuntis.new.text": "Bitte verwende keine privaten Zugangsdaten. Für die Einbindung der Datenquelle empfehlen wir einen HPI Schul-Cloud spezifischen WebUntis Account zu erstellen.",
 	"pages.administration.datasources.webuntis.new.title": "Zugangsdaten",
 	"pages.administration.index.title": "Administration",
 	"pages.administration.remove.error": "Löschen der Nutzer fehlgeschlagen",
