--- a/locale/de.json
+++ b/locale/de.json
@@ -66,6 +66,7 @@
 	"components.molecules.EdusharingFooter.img_alt": "edusharing-logo",
 	"components.molecules.EdusharingFooter.text": "powered by",
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
+	"components.molecules.ShareContentModal": "Share",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
 	"components.molecules.adminfooterlegend.title": "Legende",
 	"components.molecules.admintablelegend.externalSync": "Die Nutzerdaten deiner Schule werden aus einer externen Quelle (LDAP, IDM o.ä.) synchronisiert. Die Bearbeitung der Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der {shortName}. Finde weitere Informationen im",
@@ -276,6 +277,7 @@
 	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
+	"pages.content.modal.qr.alternative": "Alternativ kannst du blah blah",
 	"pages.content.notification.successMsg": "Material wurde erfolgreich hinzugefügt",
 	"pages.content.notification.errorMsg": "Irgendetwas ist schiefgegangen. Material konnte nicht hinzugefügt werden",
 	"pages.content.notification.lernstoreNotAvailable": "Lernstore ist nicht verfügbar",
