--- a/locale/de.json
+++ b/locale/de.json
@@ -2,6 +2,7 @@
 	"common.actions.add": "Hinzufügen",
 	"common.actions.back": "Zurück",
 	"common.actions.cancel": "Abbrechen",
+	"common.actions.close": "Schließen",
 	"common.actions.discard": "Verwerfen",
 	"common.actions.ok": "OK",
 	"common.actions.remove": "Löschen",
