[SC-3686] Added new texts

--- a/locale/de.json
+++ b/locale/de.json
@@ -318,9 +318,10 @@
 	"pages.termsofuse.title": "Nutzungsordnung und Datenschutzerklärung",
 	"storybook.lang": "Ich bin jetzt auf Deutsch!",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
-	"utils.adminFilter.consent.label.missing": "Keine Einverständniserklärungen vorhanden",
-	"utils.adminFilter.consent.label.ok": "Alle Einverständniserklärungen vorhanden",
-	"utils.adminFilter.consent.label.parentsAgreed": "Eltern haben zugestimmt",
+	"utils.adminFilter.consent.label.missing": "Alle Einverständniserklärungen fehlen",
+	"utils.adminFilter.consent.label.registrationLink": "Registrierungslink per Mail versandt",
+	"utils.adminFilter.consent.label.ok": "Alle benötigten Einverständniserklärungen liegen vor",
+	"utils.adminFilter.consent.label.parentsAgreed": "Einverständniserklärung der Eltern liegt vor; Einverständniserklärung des Schülers fehlt noch",
 	"utils.adminFilter.consent.missing": "nicht vorhanden",
 	"utils.adminFilter.consent.ok": "vollständig",
 	"utils.adminFilter.consent.parentsAgreed": "nur Eltern haben zugestimmt",
