SC-5558 Refactoring of the empty state component. Introduction ContentInitialState component

--- a/locale/de.json
+++ b/locale/de.json
@@ -268,10 +268,12 @@
 	"pages.content._id.metadata.updatedAt": "zuletzt geändert am",
 	"pages.content._id.metadata.noTags": "Keine Tags",
 	"pages.content.empty_state.error.img_alt": "empty-state-img",
-	"pages.content.empty_state.error.message": "Achte darauf, dass alle Wörter richtig geschrieben sind. <br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.<br>",
-	"pages.content.empty_state.error.oops": "Oops",
+	"pages.content.empty_state.error.message": "<b>Vorschlag:</b><br><br>Achte darauf, dass alle Wörter richtig geschrieben sind. <br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.<br>",
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
-	"pages.content.empty_state.error.title": "<span>Ooops, keine Ergebnisse!</span>",
+	"pages.content.empty_state.error.title": "Ooops, keine Ergebnisse!",
+	"pages.content.init_state.img_alt": "Initial state Image",
+	"pages.content.init_state.message": "<b>Was ist NEU?</b> Ab sofort findest du hier hochwertige Inhalte von unserem Partner WirLernenOnline und noch viel mehr.<br><br><b>Was kommt als nächstes?</b> Durch die Anbindung von Antares Content Access ermöglichen wir die leichte Einbindung tausender lizensierter Inhalte direkt in der HPI Schul-Cloud.<br><br>Exclusive Inhalte für einzelne Bundesländer durch die Erschließung der Inhalte verschiedener Landesmedienzentren.<br><br>Unser Ziel ist die technische Bereitstellung möglichst aller digitalen Materialbestände, die Schulen und Unterrichtspraxis gesichert helfen können – im Interesse aller allgemeinbildenden Schulformen, aller Fächer und aller Kompetenzbereiche, aus dem Bereich OER sowie von etablierten Verlagen und Bildungsproduzenten.<br>",
+	"pages.content.init_state.title": "Willkommen im neuen Lern-Store!",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
 	"pages.content.index.search_resources": "Ressourcen",
