--- a/locale/de.json
+++ b/locale/de.json
@@ -315,8 +315,8 @@
 	"pages.news.title": "Neuigkeiten",
 	"pages.termsofuse.title": "Nutzungsordnung und Datenschutzerklärung",
 	"storybook.lang": "Ich bin jetzt auf Deutsch!",
-	"utils.test.account.mail.subject": "Kostenloses Test-konto",
-	"utils.test.account.mail.body": "Jetzt Demo-Account beantragen! Mit der HPI Schul-Cloud können Sie datenschutzkonform in einem virtuellen Klassenzimmer Unterricht mit Ihren Schüler:innen gestalten. Videokonferenzen, Abgabe von Hausaufgaben, Verwendung interaktiver Tools und die sichere Recherche von Lernmaterialien sind nur einige der weiteren Vorteile der HPI Schul-Cloud. Sie möchten mehr über unsere Lernumgebung wissen? Dann beantragen Sie jetzt einen 14-tägigen Testaccount.",
+	"utils.test.account.mail.subject": "Test-Account für die HPI Schul-Cloud",
+	"utils.test.account.mail.body": "Liebes HPI Schul-Cloud-Team,%0D%0Abitte senden Sie mir einen 14 Tage gültigen Testaccount kostenlos und unverbindlich zu.%0D%0A %0D%0A <b>(bitte ausfüllen):</b> %0D%0AVorname und Nachname:%0D%0AE-Mail-Adresse:%0D%0ASchule oder Organisation:%0D%0A %0D%0ARolle in dieser Schule oder Organisation:%0D%0A %0D%0A___________________________________________%0D%0A %0D%0AWas ist der HPI Schul-Cloud Testaccount?%0D%0A %0D%0AMit der HPI Schul-Cloud können Sie Ihren Unterricht datenschutzkonform in einem virtuellen Klassenzimmer gestalten. Sie können beispielsweise Videokonferenzen abhalten, Hausaufgaben digital aufgeben und abgeben, interaktive Unterrichtstools einbinden oder Lernmaterialien sicher recherchieren.%0D%0ADer 14 Tage gültige, anonymisierte Testaccount gibt Ihnen Gelegenheit, die HPI Schul-Cloud selbst zu erkunden. Ihnen werden die Zugangsdaten werktags so schnell wie möglich an die angegebene E-Mail-Adresse zugesandt. Nach 14 Tagen wird Ihr Testaccount und alle darin enthaltenden Daten automatisch gelöscht, weitere Schritte von Ihrer Seite sind nicht erforderlich.%0D%0AVielen Dank!",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
 	"utils.adminFilter.consent.label.missing": "Keine Einverständniserklärungen vorhanden",
 	"utils.adminFilter.consent.label.ok": "Alle Einverständniserklärungen vorhanden",
