deleted last paragraph

--- a/locale/de.json
+++ b/locale/de.json
@@ -281,7 +281,7 @@
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
 	"pages.content.empty_state.error.title": "Ooops, keine Ergebnisse!",
 	"pages.content.init_state.img_alt": "Initial state Image",
-	"pages.content.init_state.message": "Ab sofort findest du hier hochwertige Inhalte von unserem Partner WirLernenOnline und noch viel mehr.<br><br><b>Bald verfügbar:</b> <ul style='list-style-position: inside'> <li> Durch die Anbindung von <b>Antares Content Access</b> ermöglichen wir die leichte Einbindung tausender lizensierter Inhalte direkt in der HPI Schul-Cloud </li> \n <li>Exclusive <b>Inhalte für einzelne Bundesländer</b> durch die Erschließung der Inhalte verschiedener Landesmedienzentren<br> </li> </ul> <br>Unser Ziel ist die technische Bereitstellung möglichst aller digitalen Materialbestände, die Schulen und Unterrichtspraxis gesichert helfen können – im Interesse aller allgemeinbildenden Schulformen, aller Fächer und aller Kompetenzbereiche, aus dem Bereich OER sowie von etablierten Verlagen und Bildungsproduzenten.<br>",
+	"pages.content.init_state.message": "Ab sofort findest du hier hochwertige Inhalte von unserem Partner WirLernenOnline und noch viel mehr.<br><br><b>Bald verfügbar:</b> <ul style='list-style-position: inside'> <li> Durch die Anbindung von <b>Antares Content Access</b> ermöglichen wir die leichte Einbindung tausender lizensierter Inhalte direkt in der HPI Schul-Cloud </li> \n <li>Exclusive <b>Inhalte für einzelne Bundesländer</b> durch die Erschließung der Inhalte verschiedener Landesmedienzentren<br> </li> </ul>",
 	"pages.content.init_state.title": "Willkommen im neuen Lern-Store!",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
