Vuex store updates

--- a/locale/de.json
+++ b/locale/de.json
@@ -17,6 +17,7 @@
 	"common.labels.firstName": "Vorname",
 	"common.labels.firstName.new": "Neuer Vorname",
 	"common.labels.lastName": "Nachname",
+	"common.labels.fullName": "Vorname & Nachname",
 	"common.labels.lastName.new": "Neuer Nachname",
 	"common.labels.login": "Login",
 	"common.labels.name": "Name",
@@ -251,6 +252,7 @@
 	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
 	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
 	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
+	"pages.administration.students.consent.steps.register.print": "Du kannst dich nun in der HPI Schul-Cloud mit deinem Startpasswort einloggen. Gehe dazu auf {hostName} und logge dich dort mit den folgenden Zugansdaten ein:",
 	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
 	"pages.administration.students.consent.steps.download.info": "Speichere und drucke die Liste aus um sie anschließend den Nutzer:innen für ihre Erstanmeldung auszuhändigen.",
 	"pages.administration.students.consent.steps.download.explanation": "Das sind die Passwörter für die Erstanmeldung in der Schul-Cloud.\nBeim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login die Einwilligungserklärung zusätzlich selbst erklären.",
@@ -262,6 +264,8 @@
 	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
 	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
 	"pages.administration.students.consent.cancel.modal.confirm": "Trotzdem abbrechen",
+	"pages.administration.students.consent.print": "Liste mit Zugangsdaten drucken",
+	"pages.administration.students.consent.print.title": "Einverständnis erfolgreich erklärt",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
 	"pages.administration.teachers.index.remove.confirm.btnText": "Lehrer:in löschen",
