--- a/locale/en.json
+++ b/locale/en.json
@@ -9,6 +9,7 @@
 	"common.labels.email": "Email",
 	"common.labels.firstName": "First Name",
 	"common.labels.lastName": "Last Name",
+	"common.labels.fullName": "Name & Last Name",
 	"common.labels.name": "Name",
 	"common.labels.teacher": "Teacher",
 	"common.labels.room": "Room",
@@ -87,6 +88,8 @@
 	"pages.administration.datasources.new.short_title": "",
 	"pages.administration.datasources.new.title": "",
 	"pages.administration.index.title": "Administration",
+	"pages.administration.students.consent.print": "Print list with access data",
+	"pages.administration.students.consent.print.title": "Consent successfully declared",
 	"pages.content.empty_state.error.message": "<span><p>Check if all words are spelled correctly.<br>Try out other search queries.<br>Try out more common queries.<br>Try to use a shorter query.</p></span>",
 	"pages.content.empty_state.error.title": "<span>Whoops,<br> no results!</span>",
 	"pages.content.empty_state.error.subtitle": "Suggestion:",
