--- a/locale/en.json
+++ b/locale/en.json
@@ -90,6 +90,7 @@
 	"pages.administration.index.title": "Administration",
 	"pages.administration.students.consent.print": "Print list with access data",
 	"pages.administration.students.consent.print.title": "Consent successfully declared",
+	"pages.administration.students.consent.steps.complete.inputerror": "Date of birth missing",
 	"pages.content.empty_state.error.message": "<span><p>Check if all words are spelled correctly.<br>Try out other search queries.<br>Try out more common queries.<br>Try to use a shorter query.</p></span>",
 	"pages.content.empty_state.error.title": "<span>Whoops,<br> no results!</span>",
 	"pages.content.empty_state.error.subtitle": "Suggestion:",
